authorization/src/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authorization-service
spec:
  selector:
    app: authorization
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8087
  type: ClusterIP
